--- a/Code Busters/css/styles.css
+++ b/Code Busters/css/styles.css
@@ -3,6 +3,13 @@ body{
 	margin: 0;
 	padding: 0;
 }
+.landing-img{
+	width: 200px;
+	/* margin: 0 10px; */
+	position: absolute;
+	top: 15%;
+	left: 43%;
+}
 
 .black-box{
 	height: 30vh;
@@ -16,7 +23,7 @@ body{
 .login-details{
 	width: 800px;
 	margin: 0 auto;
-	padding-top: 100px;
+	padding-top: 150px;
 }
 input, button{
 
@@ -70,6 +77,7 @@ input, button{
 	background-color: black;
 	display: flex;
 	height: 15vh;
+	align-items: center;
 }
 .page-content{
 	flex: 8;
@@ -77,10 +85,15 @@ input, button{
 }
 .header-title-text{
 	color: #F0D23B;
-	line-height: 0.1em;
+	line-height: 0.3em;
+	font-size: 20px;
 }
 .header-nav-img{
 	flex: 1;
+	text-align: right
+}
+.header-nav-img img{
+	width: 100px;
 }
 .header-nav-title{
 	flex: 1;
@@ -112,7 +125,7 @@ hr{
 	background-color: rgba(169,169,169,1); 
 	border: 0 none; 
 	color: #eee; 
-	height: 1px
+	height: 2px;
 }
 /* Time-box */
 .page-content{
@@ -126,7 +139,7 @@ hr{
 }
 .time-box{
 	padding: 15px 20px 30px 20px;
-	border: 1px solid black;
+	border: 0px solid black;
 	box-shadow: 5px 10px 18px gray;
 	width: 600px;
 	margin: 50px 50px 20px 0;
@@ -143,7 +156,8 @@ img{
 	width: 100px; 
 	text-align: right; 
 }
-.time-box input{
+
+.time-box .home{
 	margin-top: 20px;
 	margin-left: 20px;
 	border-radius: 5px;
@@ -163,7 +177,9 @@ img{
 	text-decoration: none;
 	font-weight: 700;
 }
-
+.label{
+	margin-bottom: 0px;
+}
 .date{
 	float: right;
 	margin-top: 10px;
@@ -176,7 +192,7 @@ img{
 	margin-top: 100px;
 }
 .add-new-box{
-	border: 1px solid gray;
+	border: 0px solid gray;
 	display: flex;
 	box-shadow: 5px 10px 18px gray;
 	padding: 10px 30px
@@ -204,7 +220,15 @@ img{
 	width: 250px;
 }
 .back{
+	font-size: 20px;
+	text-decoration: none;
 	float: left;
+	color: gray;
+	margin-top: 40px;
+
+}
+.back:hover{
+	opacity: 0.4;
 }
 
 /* Popup container - can be anything you want */
@@ -278,4 +302,29 @@ img{
 .filter{
 	padding: 7px 15px;
 	font-size: 14px;
+}
+.searchbar{
+	margin-top: 50px;
+	padding: 10px 30px;
+	border-radius: 10px;
+	border: 0.5px solid black;
+}
+#myDate, #datepicker{
+	margin: 8px 10px;
+	border-radius: 10px;
+	border: 1px solid black;
+	padding: 8px 50px 8px 20px;
+}
+.sales-header{
+	margin-top: 0;
+}
+.add-photo img{
+	width: 100px;
+}
+.email-modal{
+	width: 450px;
+	height: 300px;
+	background-color: black;
+	border: 0px solid white;
+	color: white;
 }
